# elohell

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  apuntes.md
.github/workflows/: matchmaking.yml  producer.yml
docker/: docker-compose-local.yml  docker-compose-matchmaking-test.yml  docker-compose-producer-test.yml  docker-compose.yml
docker/db/: 01-bootstrap.sql
services/matchmaking/: .air.toml  Dockerfile  go.mod  go.sum  sqlc.yaml
services/matchmaking/cmd/: main.go
services/matchmaking/internal/db/: match.sql.go  models.go
services/matchmaking/internal/db/queries/: match.sql
services/matchmaking/internal/db/schema/: 002_matches_table.sql  003_match_players.sql
services/matchmaking/internal/matchmaking/: matchmaking.go  matchmaking_test.go
services/producer/: Dockerfile  main.py  pyproject.toml
services/producer/src/: config.py  logging_config.py  main.py  redis_client.py  user_generator.py
services/producer/tests/: conftest.py  test_generate_fake_user.py  test_producer_loop.py  test_queue_order.py  test_write_redis_message.py
