[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["redis>=6.2.0"]

[dependency-groups]
local = [
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "types-redis>=4.6.0.20241004",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
